--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "aes-js": "^3.1.2",
+    "crypto-js": "^4.1.1",
     "ipfs-http-client": "^60.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
