--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "ipfs-http-client": "^60.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^5.3.0",
     "web3": "^1.8.2"
   },
   "devDependencies": {
