--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,21 @@
   },
   "dependencies": {
     "aes-js": "^3.1.2",
+    "assert": "^2.0.0",
+    "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.1.1",
+    "https-browserify": "^1.0.0",
     "ipfs-http-client": "^60.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.0",
-    "web3": "^1.8.2"
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "truffle-contract": "^4.0.31",
+    "url": "^0.11.0",
+    "web3": "^1.9.0"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.18.6",
