--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "assert": "^2.0.0",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.1.1",
+    "html-react-parser": "^3.0.16",
     "https-browserify": "^1.0.0",
     "ipfs-http-client": "^60.0.0",
     "os-browserify": "^0.3.0",
@@ -18,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.0",
+    "react-toastify": "^9.1.2",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "truffle-contract": "^4.0.31",
